--- a/estilos/menu-mobile.css
+++ b/estilos/menu-mobile.css
@@ -1,16 +1,11 @@
 @charset "UTF-8";
 
-
-.btn-abrir-menu {
-    display: none;
-}
 .btn-abrir-menu i {
     color: white;
     font-size: 40px;
-    
 }
 .menu-mobile {
-    background-color: #4d4d4d;
+    background-color: #212121;
     height: 100vh;
     position: fixed;
     top: 0;
@@ -45,11 +40,11 @@
     display: block;
 }
 .menu-mobile nav ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.473);
-    color: #4d4d4d;
+    background-color: white;
+    color: black;
 }
 .overlay-menu {
-    background-color: rgba(255, 255, 255, 0.699);
+    background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
     position: fixed;
